--- a/_sass/modules/about/_variables.scss
+++ b/_sass/modules/about/_variables.scss
@@ -4,6 +4,9 @@ $about-width: 450px !default;
 // .about-body
 $about-body-width: 295px !default;
 
+// .about-body-description
+$about-body-description-line-height: $caption-text-size + 4px !default;
+
 // .about-avatar
 $about-avatar-shrunk-width: 70px !default;
 $about-avatar-shrunk-height: $about-avatar-shrunk-width !default;
